# ai-race-analyst

./: .gitignore  CLAUDE.md  README.md  SPEC_tire_degradation.md  pyproject.toml  requirements.txt  step1_fetch_data.py  step2_explore_data.py  step3_pace_analysis.py  step4_degradation_analysis.py  step5_sector_analysis.py
outputs/: sector_summary_bahrain_2025.csv
src/analysis/: degradation.py  pace.py  position.py  sector.py
src/data/: lap_data.py  session_loader.py
